--- a/config.json
+++ b/config.json
@@ -3,5 +3,5 @@
   "short_description": "Desktop bitcoin Assistant",
   "tile": "/gerty/static/gerty.png",
   "contributors": ["arcbtc", "blackcoffeebtc"],
-  "min_lnbits_version": "0.XX.0"
+  "min_lnbits_version": "0.11.0"
 }
