allow custom path (#6)
* allow custom path

* update minversion 0.11.0

---------

Co-authored-by: dni ⚡ <office@dnilabs.com>

--- a/config.json
+++ b/config.json
@@ -2,5 +2,6 @@
   "name": "Gerty",
   "short_description": "Desktop bitcoin Assistant",
   "tile": "/gerty/static/gerty.png",
-  "contributors": ["arcbtc", "blackcoffeebtc"]
+  "contributors": ["arcbtc", "blackcoffeebtc"],
+  "min_lnbits_version": "0.11.0"
 }
