--- a/config.json
+++ b/config.json
@@ -2,6 +2,41 @@
   "name": "Gerty",
   "short_description": "Desktop bitcoin Assistant",
   "tile": "/gerty/static/gerty.png",
-  "contributors": ["arcbtc", "blackcoffeebtc"],
-  "min_lnbits_version": "0.11.0"
+  "min_lnbits_version": "0.11.0",
+  "contributors": [
+    {
+      "name": "blackcoffeexbt",
+      "uri": "https://github.com/blackcoffeexbt",
+      "role": "Lead Developer"
+    },
+    {
+      "name": "dni",
+      "uri": "https://github.com/dni",
+      "role": "Developer"
+    },
+    {
+      "name": "Ben Arc",
+      "uri": "https://github.com/arcbtc",
+      "role": "Developer"
+    },
+    {
+      "name": "talvasconcelos",
+      "uri": "https://github.com/talvasconcelos",
+      "role": "Developer"
+    }
+  ],
+  "images": [
+    {
+      "uri": "https://raw.githubusercontent.com/lnbits/gerty/main/static/1.png"
+    },
+    {
+      "uri": "https://raw.githubusercontent.com/lnbits/gerty/main/static/2.png"
+    },
+    {
+      "uri": "https://raw.githubusercontent.com/lnbits/gerty/main/static/3.png"
+    }
+  ],
+  "description_md": "https://raw.githubusercontent.com/lnbits/gerty/main/description.md",
+  "terms_and_conditions_md": "https://raw.githubusercontent.com/lnbits/gerty/main/toc.md",
+  "license": "MIT"
 }
